--- a/index.html
+++ b/index.html
@@ -70,17 +70,17 @@
               />
             </li>
             <li>
-              <label for="password">PASSWORD</label>
-              <input
-                type="password"
-                id="password"
-                name="user-password"
-                min="1"
-                placeholder="12345@Hi"
-              />
+                <label for="password">PASSWORD</label>
+                <input
+                  type="password"
+                  id="password2"
+                  name="user-password"
+                  min="1"
+                  placeholder="12345@Hi"
+                />
             </li>
             <li>
-              <label for="password"> CONFIRM PASSWORD</label>
+              <label for="password">CONFIRM PASSWORD</label>
               <input
                 type="password"
                 id="password2"
