--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <label for="password">PASSWORD</label>
                 <input
                   type="password"
-                  id="password2"
+                  id="confirm-password"
                   name="user-password"
                   min="1"
                 />
