--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <label for="password">PASSWORD</label>
                 <input
                   type="password"
-                  id="confirm-password"
+                  id="password"
                   name="user-password"
                   min="1"
                 />
@@ -81,7 +81,7 @@
             <li>
               <label for="password">CONFIRM PASSWORD</label>
               <input
-                type="password"
+                type="confirm"
                 id="password2"
                 name="user-password"
                 min="1"
