Fixed a resposive issue with the lis

--- a/index.html
+++ b/index.html
@@ -13,10 +13,6 @@
         class="card-img"
         src="./img/akram-huseyn-NPP0qXVIGDQ-unsplash.jpg"
         alt="Doctors operating"/>
-      <!-- <div class="card-container"></div> -->
-      
-
-      <div class="imageWithText"></div>
       </div>
     </section>
 
@@ -41,7 +37,8 @@
                 type="text"
                 id="first-name"
                 name="user_name"
-                placeholder="James"
+                placeholder="James" 
+
               />
             </li>
             <li>
@@ -51,6 +48,8 @@
                 id="last-name"
                 name="user_last-name"
                 placeholder="Willians"
+
+                required
               />
             </li>
             <li>
@@ -68,26 +67,26 @@
               <label for="phone-number">PHONE NUMBER</label>
               <input
                 type="tel"
-                id="phone-number"
+                id="user-number"
                 name="user_phone"
                 placeholder="123-456-7890"
               />
             </li>
             <li>
-              <label for="password">PASSWORD</label>
-              <input
-                type="password"
-                id="password"
-                name="user-password"
-                min="1"
-                placeholder="12345@Hi"
-              />
+                <label for="password">PASSWORD</label>
+                <input
+                  type="password"
+                  id="password"
+                  name="user-password"
+                  min="1"
+                  placeholder="12345@Hi"
+                />
             </li>
             <li>
-              <label for="password"> CONFIRM PASSWORD</label>
+              <label for="password">CONFIRM PASSWORD</label>
               <input
                 type="password"
-                id="password2"
+                id="confirm"
                 name="user-password"
                 min="1"
               />
